# meok-eu-code-of-practice-mcp

./: .gitignore  AEO_GAP_FIX_2026-06-15.md  AGENT.md  AGENTS.md  AGENTS_READY.md  AGENT_CARD.md  API_KEYS_EXECUTE_NOW.md  API_KEYS_QUICK_SETUP.md  API_PROVIDER_SETUP.sh  ATTRIBUTION_CORRECTION_70abab7.md  AUDIT_2026-06-08.md  BLEEDING_EDGE_INTELLIGENCE_2026-05-13.md  BLOCKER_INVENTORY_2026-06-15.md  BREAKTHROUGH_ROADMAP.md  BULK_PUBLISH_PYPI.sh  CANONICAL_DECISIONS_2026-06-16.md  CARE_MEMBRANE_GLAMA_WONG2_PUSH_2026-06-14.md  CARE_MEMBRANE_SMITHERY_PUSH_2026-06-14.md  CLAUDE.md  COMMANDS.md  COMPETITIVE_MATRIX_CAI_vs_CSOAI_2026-06-16.md  COMPLETE_ACTIVATION_CHECKLIST.md  COMPLETE_PORTFOLIO_ACTION_PLAN.md  COMPLETE_TASK_LIST.md  COMPREHENSIVE-E2E-AUDIT-2026-04-16.md  COMPREHENSIVE_AUDIT.md  COORDINATION.md  COUNCIL_OF_MCPS_ARCHITECTURE.md  CRITICAL-PATH-TO-REVENUE.md  CRITICAL_FIXES_INSTRUCTIONS.md  CRITICAL_SYSTEM_FIXES.md  D9_AUTO_PLAN_2026-06-15.md  DATA_MOAT_DOSSIER_2026-06-16.md  DAY10_5_EU_PROSPECTS_2026-06-16.md  DAY10_COMMUNITY_POSTS_2026-06-16.md  DAY10_EOD_SEAL_2026-06-16.md  DAY10_PRESS_RELEASE_2026-06-16.md  DAY10_SEAL_2026-06-16.md  DAY11.5_CSOAI_MASTER_ARRIVED_2026-06-16.md  DAY11_5_PRIVATE_PROSPECTS_2026-06-16.md  (+417 more)
.claude/: launch.json
DAY8_DAY9_ENHANCEMENTS_2026-06-15/pypi/sovereign-care-validation-nn/: README.md  pyproject.toml
DAY8_DAY9_ENHANCEMENTS_2026-06-15/pypi/sovereign-partnership-detection-ml/: README.md  pyproject.toml
DAY8_DAY9_ENHANCEMENTS_2026-06-15/pypi/sovereign-threat-detection-nn/: README.md  pyproject.toml
mcp-marketplace/meok-aquaponics-monitor-mcp/: README.md  pyproject.toml  server.py
mcp-marketplace/meok-asc-rspca-crosswalk-mcp/: README.md  pyproject.toml  server.py
mcp-marketplace/meok-koikeeper-ai-mcp/: README.md  pyproject.toml  server.py
mcp-marketplace/meok-laia-aquatic-mcp/: README.md  pyproject.toml  server.py
mcp-marketplace/meok-rspca-aquaculture-mcp/: README.md  pyproject.toml  server.py
mcp-marketplace/meok-uk-fhi-mcp/: README.md  pyproject.toml  server.py
meok-ai-psych-vuln-audit-mcp/: .gitignore  README.md  pyproject.toml
meok-ai-psych-vuln-audit-mcp/meok_ai_psych_vuln_audit_mcp/: __init__.py  server.py
meok-ai-psych-vuln-audit-mcp/tests/: test_meok_ai_psych_vuln_audit_mcp.py
meok-annex-iii-impact-mcp/: .gitignore  LICENSE  README.md  pyproject.toml
meok-annex-iii-impact-mcp/meok_annex_iii_impact_mcp/: __init__.py  server.py
meok-annex-iii-impact-mcp/tests/: test_meok_annex_iii_impact_mcp.py
meok-auth/: README.md  pyproject.toml
meok-auth/src/meok_auth/: __init__.py  middleware.py
meok-cli/: README.md  pyproject.toml
meok-cli/meok_cli/: __init__.py  cli.py  csoai.py
meok-eu-code-of-practice-mcp/: .gitignore  README.md  pyproject.toml
meok-eu-code-of-practice-mcp/meok_eu_code_of_practice_mcp/: __init__.py  server.py
meok-eu-code-of-practice-mcp/tests/: test_meok_eu_code_of_practice_mcp.py
meok-one/: .gitignore  BENCH_RESULT_2026-05-30.txt  HIVE_OPERATE.md  MEOK_GLOBAL_INFRASTRUCTURE.md  MEOK_GROUNDED_STRATEGY.md  MEOK_ONE_AS_OS.md  README.md  STRIPE_LINKS.md  d17_verifier_bridge.py  prove_10_direct.py  prove_10_tasks.py  prove_3x2_quick.py  prove_5x2.py  pyproject.toml
meok-one/.claude/: launch.json
meok-one/bench/: perception_sov3_demo.py  sigil_bench.py
meok-one/data/: assitti_directory.json  lens_tools.json  snakes_ladders.json
meok-one/deploy/: Caddyfile.snippet  DEPLOY.md  deploy.sh  meok-one.service
meok-one/e2e/: os.spec.js  package-lock.json  package.json  playwright.config.js  qa_sweep_live.mjs  verify_factory_dome.mjs  verify_hud.mjs
meok-one/meok_one/: __init__.py  act.py  agent_cards.py  all_providers.py  asi_evolve_hive.py  assitti.py  auth.py  bench.py  bft_lab.py  brain.py  brain_tournament.py  brains.py  bridge.py  capabilities.py  characters.json  cli.py  connect.py  constellation.py  data_forge.py  factory.py  fleet_indexer.py  flywheel_ingest.py  forecast.py  hatch.py  hermes_bridge.py  hive_king.py  hive_landing.py  hive_queen.py  horus.py  horus_layer0.py  import_bundle.py  law.py  law_bundle.json  lens_tools.py  mcp_bridge.py  memory.py  memory_tier.py  olm.py  olm_federation.py  olm_tier_integration.py  (+27 more)
meok-one/meok_one/web/: HATCH_RIVE_SPEC.md  avatar.html  dome.html  embed.html  embed.js  family.html  guardian.html  hatch.html  help.html  hud.html  i18n.js  index.html  law.html  manifest.webmanifest  os.html  pricing.html  registry.html  siri.html  sw.js  tools.html  widget.html  work.html
meok-one/ops/: e2e_scorecard.py
meok-one/overlay/: .gitignore  README.md
meok-one/overlay/src-tauri/: Cargo.toml  tauri.conf.json
meok-one/overlay/ui/: index.html
meok-one/tests/: test_act.py  test_asi_evolve_hive.py  test_bench.py  test_brain.py  test_brains.py  test_capabilities.py  test_connect_memory.py  test_factory.py  test_hatch.py  test_hive_king.py  test_horus_layer0.py  test_registry.py  test_router.py  test_tiers.py  test_voice.py  test_x402.py
meok-one/tools/: build_law_bundle.py  forecast_scenarios.py  hands_bridge.py  m3_tui.py  meok_tui.py
meok-sigil/: MEOK_ONE_THOUGHT_LAYER.md  README.md  SPEC.md  pyproject.toml
meok-sigil/_experimental/: README.md  binary.py  bridge_mirror.py  geospatial.py  inference.py  law.py  law_execution.py  multilingual.py  quantum.py  test_geospatial.py  test_sovereign_loop.py  universal_training.py
meok-sigil/sigil/: __init__.py  benchmark.py  cli.py  emergent_demo.py  registry.py  remote.py  sign.py  sov3_adapter.py  sov3_bench.py  sov3_live_capture.py  thought.py
meok-sigil/tests/: test_sigil.py
meok-sovereign-api/: Dockerfile  docker-compose.yml  meok_sovereign.db  pyproject.toml
meok-sovereign-api/app/: config.py  database.py  main.py  models.py
meok-sovereign-api/app/auth/: router.py  security.py
meok-sovereign-api/app/characters/: router.py
meok-sovereign-api/app/llm_router/: router.py
meok-sovereign-api/app/payments/: router.py
meok-sovereign-api/app/routers/: proxy.py
meok-sovereign-api/app/waitlist/: router.py
meokclaw-desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+4655 files in other folders)
