[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "meok-auth"
version = "0.1.0"
description = "Shared authentication middleware for MEOK AI Labs MCP servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MEOK AI Labs", email = "nick@meok.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
meok-auth = "meok_auth.middleware:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meok_auth = ["py.typed"]