[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-sovereign-api"
version = "0.1.0"
description = "Sovereign backend for MEOK AI Labs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "stripe>=7.10.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
