[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-aquaponics-monitor-mcp"
version = "1.0.2"
readme = "README.md"
description = "Unified sensor + actuator schema MCP for aquaculture / aquaponic / koi systems. Wraps Atlas Scientific EZO, Whitebox Tentacle T1 MkII, Seneye, GHL ProfiLux, Bluelab Edenic, DFRobot Gravity. Species welfare safe-ranges, care-gated actuation, SOV3 attestation handoff. Underwrites MEOK PondSense open hardware. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "aquaponics", "aquaculture", "sensor", "atlas-scientific", "tentacle", "koi", "pondsense"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai/aquaponics"
Repository = "https://github.com/CSOAI-ORG/meok-aquaponics-monitor-mcp"
Pricing = "https://meok.ai/pricing"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
meok_aquaponics_monitor_mcp = "server:main"
