[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-rspca-aquaculture-mcp"
version = "1.0.3"
readme = "README.md"
description = "MCP server wrapping RSPCA Assured farmed trout (2025.07) and salmon (2024.05) welfare standards. Gap analysis, compliance scoring, audit-ready evidence pack generation, signed welfare attestations. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "rspca", "aquaculture", "fish-welfare", "trout", "salmon", "compliance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai/aquaculture"
Repository = "https://github.com/CSOAI-ORG/meok-rspca-aquaculture-mcp"
Pricing = "https://meok.ai/pricing"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
meok_rspca_aquaculture_mcp = "server:main"
