[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-care-validation-nn"
version = "0.1.0"
description = "Sovereign care validation neural network - Sovereign Substrate SOV3"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC0-1.0"}
authors = [{name = "Nicholas Templeman"}]
keywords = ["meok", "sov3", "sovereign", "neural", "compliance"]

[tool.setuptools]
packages = ["sovereign-care-validation-nn"]
