[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-care-validation-nn"
version = "0.1.0"
description = "Care validation NN - MEOK Sovereign Substrate SOV3"
requires-python = ">=3.9"
license = {text = "CC0-1.0"}

[tool.setuptools.package_data]
"*" = ["*.pkl"]
