[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-care-validation-nn"
version = "0.1.0"
description = "Sovereign sovereign-care-validation-nn"
requires-python = ">=3.9"
license = {text = "CC0-1.0"}

[tool.setuptools]
packages = ["sovereign-care-validation-nn"]

[tool.setuptools.package-data]
sovereign-care-validation-nn = ["*.pkl"]
