[package]
name = "meok-overlay"
version = "0.1.0"
description = "MEOK ONE — always-on-top desktop overlay for /hud"
authors = ["MEOK AI Labs"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# smaller release binary for a tray/overlay utility
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
